--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en"onclick="jump()">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -7,14 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Đường Bá Hào Vượt Rào</title>
     <link rel="stylesheet" href="main.css">
+    <button id="start" onclick="restart()">
+        Tôi Tên là Tao Tên Là Hào
+    </button>
 
 
 </head>
-<body onload="init()">
+<body>
 <canvas id="canvas" width="1000" height="600"></canvas>
-<img id="raocancuocdoi" src="123.jpg" style="display: none" height="500" width="700" alt=""/>
+<img id="raocancuocdoi" src="123.jpg" style="display: none" alt=""/>
 <img id="RC" src="thor.png" style="display: none" alt=""/>
-<img id="DBH" src="haoloki.png" style="display: none" height="175" width="220" alt=""/>
+<img id="DBH" src="haoloki.png" style="display: none" alt=""/>
 <script src="RC.js"></script>
 <script src="DBH.js"></script>
 <script src="main.js"></script>
