--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
 <canvas id="canvas" width="1000" height="600"></canvas>
 <img id="raocancuocdoi" src="123.jpg" style="display: none" alt=""/>
-<img id="RC" src="thor.png" style="display: none" alt=""/>
-<img id="DBH" src="haoloki.png" style="display: none" alt=""/>
+<img id="RC" src="ducdo.png" style="display: none" alt=""/>
+<img id="DBH" src="haoca.png" style="display: none" alt=""/>
 <script src="RC.js"></script>
 <script src="DBH.js"></script>
 <script src="main.js"></script>
